--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link href="catan_randomizer.css" rel="stylesheet"> 
     </head>
     <body>
-        <h2>Board</h2>
-        <div id="board">
+        <h2 class="center" >Board</h2>
+        <div v-on:click="updateTiles()" id="board" title="Click for new board!">
             <template v-for="(tile,index) in tiles">
                 <div v-if="index==0 || index==3 || index==7 || index==12 || index==16" :class="'spacer_' + index"></div>
                 <img :src="'assets/' + tile.Type + '.png'" class="tile" :class="'spot_' + index" :title="tile.Type">
