--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
+        <title>Catan Randomizer</title>
         <script src="https://unpkg.com/vue@2.1.10/dist/vue.min.js"></script>
         <script src="catan_randomizer.js"></script>
         <link href="catan_randomizer.css" rel="stylesheet"> 
