--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Catan Randomizer</title>
-        <script src="https://unpkg.com/vue@2.1.10/dist/vue.min.js"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="/lib/vue.min.js"></script>
+        <script src="/lib/axios.min.js"></script>
     </head>
     <body>
         <div id="app">
@@ -20,7 +20,7 @@
                     <div v-if="index==2 || index==6 || index==11 || index==15" class="linebreak"></div>
                 </template>
             </div>
-            
+
             <div id="scores">
                 <table>
                     <tr>
