--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Catan Randomizer</title>
-        <script src="/lib/vue.min.js"></script>
-        <script src="/lib/axios.min.js"></script>
+        <script src="lib/vue.min.js"></script>
+        <script src="lib/axios.min.js"></script>
     </head>
     <body>
         <div id="app">
