--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,8 @@
         <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     </head>
     <body>
-        <div id="app">
-            <h2 class="center"> Catan Board Finder</h2>
+        <div id="app" class="container">
+            <h2 class="center">Catan Board Finder <a role="button" href="#" @click="openInfo"><img class="icon" src="assets/info.png" /></a></h2>
             <div id="board">
                 <template v-for="(tile,index) in tiles">
                     <div  class="tile " :class="'spot_' + index + ' ' + tile.Type" :title="tile.Token">
@@ -18,7 +18,6 @@
                     <div v-if="index==2 || index==6 || index==11 || index==15" class="linebreak"></div>
                 </template>
             </div>
-
             <div id="scores">
                 <table>
                     <tr>
@@ -50,7 +49,50 @@
                         <button class="button" v-on:click="getCustomBoard()">Find custom board</button>
                         <button class="button" v-on:click="getRandomBoard()">Find random board</button>
                 </div>
-                <div class="center small">Took {{iterations}} iteration to find board</div>
+                <div id="result" class="center small">Took {{iterations}} iteration to find board</div>
+            </div>
+            <div v-if="infoOpen" id="info-modal">
+                
+                <div class="modal-content">
+                    <button class="modal-close" @click="closeInfo">Close</button>
+                    <h3>Catan Board Finder</h3>
+                    <p>A simple web app to create both random and custom-ish Settlers of Catan boards.<p>
+                    <h4>Random Boards</h4>
+                    <p>If you just want a random board, click "Find Random Board"</p>
+                    <h4>Custom-ish Boards</h4>
+                    <p>Each board has three different categories it's scored on. If you want a certain type of board, you can change these values, then click `Find Custom Board`. These are:</p>
+                    <ul>
+                        <li>
+                            Resource Clusters
+                            <ul>
+                                <li>The amount of resources that are grouped together.</li>
+                                <li>Selecting `Few` would cause most resources not to be touching another of the same resource. </li>
+                                <li>Selecting `Many` would result in the ores all together and/or the forest all together, etc. </li>
+                            </ul>
+                        </li>
+                        <li>
+                            Token Clusters 
+                            <ul>
+                                <li>The amount of high-probabilty spaces that are grouped together</li>
+                                <li>Selecting `Few` would mean high probability spots (5-9) would be spread across the board</li>
+                                <li>Selecting `Many` would mean high probability spots (5-9) would be next to other high probability spots</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Probability of Resources
+                            <ul>
+                                <li>The chances of getting each resource</li>
+                                <li>Selecting `Even` means that each resource has a fairly even chance of being rolled. </li>
+                                <li>Selecting `Very Uneven` means that some resources will be rolled a lot while others will be rolled infrequently.</li>
+                            </ul>
+                        </li>
+                    </ul>
+    
+                    <h4>Why would I build a custom board?</h4>
+                    <p>Building a custom board lets you taper your game to who's playing. </p>
+                    <p>Choosing a game of "Few", "Few", "Even" means there aren't many "hotspots" and that everyone has a fairly even chance of winning the game. This is good for beginners or anyone who's been bogged down by realizing you were going to lose 10 minutes into the game. </p>
+                    <p>Choosing a game of "Many", "Many", "Very Uneven" leads to an extreme game where there are many bad places to build and few good places. Good for people who really like competition, or masochists.</p>
+                </div>
             </div>
         </div>
     </body>
