fix: resource paths

--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,7 @@
             </div>
         </div>
     </body>
-    <script src="catan_randomizer_data.js"></script>
-    <script src="catan_randomizer_ui.js"></script>
-    <link href="catan_randomizer.css" rel="stylesheet">
+    <script src="./catan_randomizer_data.js"></script>
+    <script src="./catan_randomizer_ui.js"></script>
+    <link href="./catan_randomizer.css" rel="stylesheet">
 </html>
