--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Catan Randomizer</title>
         <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+        <base href="http://projects.tuchfarber.com/catan-board-finder/">
     </head>
     <body>
         <div id="app" class="container">
@@ -96,7 +97,7 @@
             </div>
         </div>
     </body>
-    <script src="./catan_randomizer_data.js"></script>
-    <script src="./catan_randomizer_ui.js"></script>
-    <link href="./catan_randomizer.css" rel="stylesheet">
+    <script src="catan_randomizer_data.js"></script>
+    <script src="catan_randomizer_ui.js"></script>
+    <link href="catan_randomizer.css" rel="stylesheet">
 </html>
