fix: mixed content warning

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Catan Randomizer</title>
         <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-        <base href="http://projects.tuchfarber.com/catan-board-finder/">
+        <base href="https://projects.tuchfarber.com/catan-board-finder/">
     </head>
     <body>
         <div id="app" class="container">
